2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove AC_HEADER_STDC invocation.
	* m4/general.m4 (CL_MODULE_COMMON_CHECKS): Remove AC_HEADER_STDC
	invocation.
	* lispbibl.d: Assume STDC_HEADERS.
	* stream.d: Likewise.
	* unix.d: Likewise.
	* win32.d: Don't set STDC_HEADERS.
	* malloc/gmalloc.c: Assume ANSI C or C++, STDC_HEADERS, memmove.
	* unix/sigsegv.c: Assume STDC_HEADERS.
	* modules/pcre/cpcre.c: Assume STDC_HEADERS.
	* modules/rawsock/configure.in: Test for unistd.h.
	* modules/rawsock/rawsock.c: Assume STDC_HEADERS.

2008-05-30  Sam Steingold  <sds@gnu.org>

	* m4/siginterrupt.m4: fix a typo:
	$ac_cv_func_strerror -> $ac_cv_func_siginterrupt

2008-05-29  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove CL_DIR_HEADER invocation.
	* m4/dir.m4: Remove file.
	* m4/closedir.m4 (CL_CLOSEDIR): Assume <dirent.h>.
	* m4/filecharset.m4 (CL_FILECHARSET): Likewise.
	* unix.d: Likewise.
	(SDIRENT): Remove macro.
	* pathname.d (directory_search_scandir): Assume <dirent.h> and
	struct dirent.

2008-05-29  Sam Steingold  <sds@gnu.org>

	* m4/fenv_default.m4 (CL_FENV_CHECK): define and use everywhere

2008-05-29  Sam Steingold  <sds@gnu.org>

	* m4/general.m4 (CL_CHECK): extracted from ...
	(CL_COMPILE_CHECK, CL_LINK_CHECK): use it

2008-05-29  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/configure.in: add proper quoting;
	use AC_LINK_IFELSE instead of AC_TRY_LINK;
	use m4_define to avoid writing the same program twice
	* m4/rusage.m4 (CL_RUSAGE): use AC_RUN_IFELSE instead of AC_TRY_RUN

2008-05-29  Sam Steingold  <sds@gnu.org>

	* m4/ln.m4 (CL_PROG_LN): use AC_CACHE_CHECK instead of
	AC_MSG_CHECKING + AC_CACHE_VAL + AC_MSG_RESULT

2008-05-29  Sam Steingold  <sds@gnu.org>

	* m4/longdouble.m4: remove obsolete file
	* m4/fenv_default.m4, m4/floatparam.m4, m4/intparam.m4:
	assume 'long double' is supported,
	use AC_COMPILE_IFELSE instead of AC_TRY_COMPILE

2008-05-28  Sam Steingold  <sds@gnu.org>
